Disable zoom, prevent horizontal overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,8 @@ html,
 body,
 #root {
   min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
